This stuff is all from a long time ago.
I think it's word definitions beginning to be implemented. Man I should
come back to this project.

--- a/game/static/style.css
+++ b/game/static/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-size: 200%;
+    font-size: 170%;
     font-family: monospace;
 }
 
@@ -237,3 +237,6 @@ textarea:hover {
     /*top: 5px;*/
 }
 
+.definition {
+    white-space: pre-line;
+}
