--- a/game/static/game.css
+++ b/game/static/game.css
@@ -7,13 +7,17 @@ a:visited {
 }
 
 .nottile {
-    border: 1px solid rgba(255, 255, 255, 0);
-    margin: -0.75px;
+    border: none;
+    position: relative;
+    display: inline;
 }
 
 .nottile a {
+    /*margin: -0.75px;*/
+    border: none;
     text-decoration: none;
     color: #000;
+    /*background-color: #ffffff;*/
 }
 
 .tile {
@@ -21,7 +25,7 @@ a:visited {
     margin: -0.75px;
     /*background-color: #fff;*/
     background-color: #D0E2E7;
-    display: inline;
+    display: inline-block;
 }
 
 .tile a {
@@ -37,8 +41,23 @@ a:visited {
     color: #000;
 }
 
+.under {
+    z-index: -1;
+}
+
+.empty {
+    position: relative;
+}
+
 .newtile {
     background-color: #ffc300;
+    cursor: -webkit-grab;
+    cursor: -moz-grab;
+    position: absolute;
+    top: -0.75px;
+    left: -0.75px;
+    z-index: 5;
+    margin: -1.5px;
 }
 
 .newtile a {
@@ -47,6 +66,7 @@ a:visited {
 
 .oldtile {
     background-color: #ffe131;
+    z-index: 1;
 }
 
 .last {
@@ -97,3 +117,23 @@ a:visited {
     background-color: #ff64fd;
 }
 
+.droppy a {
+    background-color: #5a9bad;
+}
+
+input[type="radio"].pos + label {
+    color: #00e;
+    text-decoration: underline;
+    cursor: pointer;
+    font-style: italic;
+}
+
+input[type="radio"].pos:checked + label {
+    color: #000;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+input[type="radio"].pos {
+    display: none;
+}
